overlap bug, css

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -66,7 +66,9 @@ a.action {
 }
 
 .form-inline .form-group {
-  display: inline-block;
+  display: block;
+	float:left;
+	margin-right: 10px;
 }
 
 .element-container {
